# szn-picturedetector

./: .gitignore  README.md
backend/conf/: backend.conf  backend.db.conf
backend/debian/: changelog  control  prepare  rules  szn-picturedetector-backend.dirs  szn-picturedetector-backend.init  szn-picturedetector-backend.install  szn-picturedetector-backend.links  szn-picturedetector-backend.logrotate  szn-picturedetector-backend.postinst
backend/src/: backend.py  classify.py  learning_queue.py  model.py  neural_network.py  picture.py  solver_config.py  train_model.py
caffe/scripts/: create.sh  create_image_db.sh  create_mean_file.sh  learn_time.sh  train.sh
common/: README-Seznam
common/debian/: changelog  control  rules  szn-picturedetector-common.dirs  szn-picturedetector-common.install
daemon/conf/: daemon.conf
daemon/debian/: README-Seznam  changelog  control  rules  szn-picturedetector-daemon.dirs  szn-picturedetector-daemon.init  szn-picturedetector-daemon.install  szn-picturedetector-daemon.logrotate  szn-picturedetector-daemon.postinst  szn-picturedetector-daemon.postrm  szn-picturedetector-daemon.preinst  szn-picturedetector-daemon.prerm  szn-picturedetector-daemon.supervisor
daemon/src/: create_image_db.sh  create_mean_file.sh  daemon.py
proxy/conf/: proxy.conf  uwsgi_params.conf
proxy/debian/: changelog  control  prepare  rules  szn-picturedetector-proxy.dirs  szn-picturedetector-proxy.init  szn-picturedetector-proxy.install  szn-picturedetector-proxy.links  szn-picturedetector-proxy.logrotate  (+5 more)
rpc/: Makefile.am  configure.in
rpc/conf/: rpc.conf  rpc.db.conf
rpc/debian/: README-Seznam  changelog  control  prepare  rules  szn-picturedetector-rpc.dirs  szn-picturedetector-rpc.init  szn-picturedetector-rpc.install  szn-picturedetector-rpc.links  szn-picturedetector-rpc.logrotate  szn-picturedetector-rpc.postinst  szn-picturedetector-rpc.postrm  szn-picturedetector-rpc.preinst  szn-picturedetector-rpc.prerm
rpc/doc/: rpc.fastrpc.help
rpc/src/: Makefile.am  config.cc  config.h  core.cc  core.h  error.cc  error.h  frpcinterface.cc  frpcinterface.h  rpc.cc  transaction.h
sql/debian/: changelog  (+10 more)
web/: README-Seznam
(+68 files in other folders)
